--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -112,7 +112,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/memory_match_biologi/index.html"></iframe>
                 </div>
             </div>
         </div>
