--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/biologi/tur.jpg" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/biologi/biologi_ekkelt.jpg" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/biologi/genteknologi.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
