--- a/widgets/memory_match_biologi/index.html
+++ b/widgets/memory_match_biologi/index.html
@@ -16,114 +16,117 @@
 
     <!-- Spill-element (skjules når iframe-bredden er under 520 px) -->
     <div id="spill">
-        <div class="kort par1">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Rev</div>
+        <div id="stokket_kort">
+            <div class="kort par1">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Rev</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
             </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+            <div class="kort par1">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Vulpes vulpes</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par2">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Ulv</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par2">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Canis lupus</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par3">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Mår</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par3">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Martes martes</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par4">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Brunbjørn</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par4">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Ursus arctos</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par5">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Jerv</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par5">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Gulo gulo</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par6">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Grevling</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
+            </div>
+            <div class="kort par6">
+                <div class="snudd-kort">
+                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <div class="tekst-til-bilde">Meles meles</div>
+                </div>
+                <div class="skjult-kort">
+                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                </div>
             </div>
         </div>
-        <div class="kort par1">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Vulpes vulpes</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par2">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Ulv</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par2">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Canis lupus</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par3">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Mår</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par3">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Martes martes</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par4">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Brunbjørn</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par4">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Ursus arctos</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par5">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Jerv</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par5">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Gulo gulo</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par6">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Grevling</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
-        <div class="kort par6">
-            <div class="snudd-kort">
-                <img src="/assets/imgs/kjemi/atomikon.png" alt="">
-                <div class="tekst-til-bilde">Meles meles</div>
-            </div>
-            <div class="skjult-kort">
-                <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
-            </div>
-        </div>
+        <div id="temp_stokker"></div>
     </div>
     <script src="memory_match_biologi.js"></script>
 </body>
