Biologi-spill relativt ferdig
Må fjerne noen console.log og kommentere (ikke veldig tilpasset mobil heller)

--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -112,7 +112,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/memory_match_biologi/index.html"></iframe>
+                    <iframe src="/widgets/memory_match_biologi/index.html" id="memory-match-spill"></iframe>
                 </div>
             </div>
         </div>
@@ -212,5 +212,6 @@
     <div id="footer-placeholder"></div>
     <script src="/script/footer.js"></script>
     <script src="/script/global.js"></script>
+    <script src="/script/biologi.js"></script>
 </body>
 </html>
