--- a/widgets/memory_match_biologi/index.html
+++ b/widgets/memory_match_biologi/index.html
@@ -127,6 +127,7 @@
             </div>
         </div>
         <div id="temp_stokker"></div>
+        <div id="nullstill-knapp"><button>Start på nytt</button></div>
     </div>
     <script src="memory_match_biologi.js"></script>
 </body>
