Bilder lagt til på Memory Match
Dyrebilder eksisterer! :D

--- a/widgets/memory_match_biologi/index.html
+++ b/widgets/memory_match_biologi/index.html
@@ -19,7 +19,7 @@
         <div id="stokket_kort">
             <div class="kort par1">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/rev.png" alt="Bilde av rev">
                     <div class="tekst-til-bilde">Rev</div>
                 </div>
                 <div class="skjult-kort">
@@ -28,7 +28,7 @@
             </div>
             <div class="kort par1">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/rev.png" alt="Bilde av rev">
                     <div class="tekst-til-bilde">Vulpes vulpes</div>
                 </div>
                 <div class="skjult-kort">
@@ -37,7 +37,7 @@
             </div>
             <div class="kort par2">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
                     <div class="tekst-til-bilde">Ulv</div>
                 </div>
                 <div class="skjult-kort">
@@ -46,7 +46,7 @@
             </div>
             <div class="kort par2">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
                     <div class="tekst-til-bilde">Canis lupus</div>
                 </div>
                 <div class="skjult-kort">
@@ -55,7 +55,7 @@
             </div>
             <div class="kort par3">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/mår.png" alt="Bilde av mår">
                     <div class="tekst-til-bilde">Mår</div>
                 </div>
                 <div class="skjult-kort">
@@ -64,7 +64,7 @@
             </div>
             <div class="kort par3">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/mår.png" alt="Bilde av mår">
                     <div class="tekst-til-bilde">Martes martes</div>
                 </div>
                 <div class="skjult-kort">
@@ -73,7 +73,7 @@
             </div>
             <div class="kort par4">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
                     <div class="tekst-til-bilde">Brunbjørn</div>
                 </div>
                 <div class="skjult-kort">
@@ -82,7 +82,7 @@
             </div>
             <div class="kort par4">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
                     <div class="tekst-til-bilde">Ursus arctos</div>
                 </div>
                 <div class="skjult-kort">
@@ -91,7 +91,7 @@
             </div>
             <div class="kort par5">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
                     <div class="tekst-til-bilde">Jerv</div>
                 </div>
                 <div class="skjult-kort">
@@ -100,7 +100,7 @@
             </div>
             <div class="kort par5">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
                     <div class="tekst-til-bilde">Gulo gulo</div>
                 </div>
                 <div class="skjult-kort">
@@ -109,7 +109,7 @@
             </div>
             <div class="kort par6">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
                     <div class="tekst-til-bilde">Grevling</div>
                 </div>
                 <div class="skjult-kort">
@@ -118,7 +118,7 @@
             </div>
             <div class="kort par6">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/kjemi/atomikon.png" alt="">
+                    <img src="/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
                     <div class="tekst-til-bilde">Meles meles</div>
                 </div>
                 <div class="skjult-kort">
