Flytting av biologi css og endring path biologi

--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/biologi.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/biologi/biologi.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>biologi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Biologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -88,8 +88,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/biologi/biologi_blod.jpg" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/biologi/mikroskop.jpg" alt="Person som driver med kjemi">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/biologi_blod.jpg" alt="blod">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/mikroskop.jpg" alt="Mikroskop">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -112,7 +112,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/memory_match_biologi/index.html" id="memory-match-spill"></iframe>
+                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/memory_match_biologi/index.html" id="memory-match-spill"></iframe>
                 </div>
             </div>
         </div>
@@ -174,8 +174,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/biologi/tur.jpg" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/biologi/genteknologi.png" alt="Person som driver med kjemi">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/tur.jpg" alt="Person som driver med kjemi">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/genteknologi.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -210,8 +210,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
-    <script src="/script/biologi.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/biologi.js"></script>
 </body>
 </html>
