--- a/widgets/memory_match_biologi/index.html
+++ b/widgets/memory_match_biologi/index.html
@@ -19,110 +19,110 @@
         <div id="stokket_kort">
             <div class="kort par1">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/rev.png" alt="Bilde av rev">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/rev.png" alt="Bilde av rev">
                     <div class="tekst-til-bilde">Rev</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par1">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/rev.png" alt="Bilde av rev">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/rev.png" alt="Bilde av rev">
                     <div class="tekst-til-bilde">Vulpes vulpes</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par2">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
                     <div class="tekst-til-bilde">Ulv</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par2">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/ulv.png" alt="Bilde av ulv">
                     <div class="tekst-til-bilde">Canis lupus</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par3">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/mår.png" alt="Bilde av mår">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/mår.png" alt="Bilde av mår">
                     <div class="tekst-til-bilde">Mår</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par3">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/mår.png" alt="Bilde av mår">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/mår.png" alt="Bilde av mår">
                     <div class="tekst-til-bilde">Martes martes</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par4">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
                     <div class="tekst-til-bilde">Brunbjørn</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par4">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/bjørn.png" alt="Bilde av bjørn">
                     <div class="tekst-til-bilde">Ursus arctos</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par5">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
                     <div class="tekst-til-bilde">Jerv</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par5">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/jerv.png" alt="Bilde av jerv">
                     <div class="tekst-til-bilde">Gulo gulo</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par6">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
                     <div class="tekst-til-bilde">Grevling</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
             <div class="kort par6">
                 <div class="snudd-kort">
-                    <img src="/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/grevling.png" alt="Bilde av grevling">
                     <div class="tekst-til-bilde">Meles meles</div>
                 </div>
                 <div class="skjult-kort">
-                    <img src="/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/ingen_bakgrunn_filled.png" alt="Elvebakken-logo">
                 </div>
             </div>
         </div>
