--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../style/programfag.css">
     <link rel="stylesheet" href="./biologi.css">
     <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
-    <title>biologi</title>
+    <title>Biologi</title>
 </head>
 <body>
     <header>
@@ -197,7 +197,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
