--- a/programfag/biologi/index.html
+++ b/programfag/biologi/index.html
@@ -92,15 +92,6 @@
                     <img src="../../assets/imgs/biologi/mikroskop.jpg" alt="Mikroskop">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -174,19 +165,10 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/biologi/tur.jpg" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/biologi/genteknologi.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/biologi/tur.jpg" alt="Folk på tur">
+                    <img src="../../assets/imgs/biologi/genteknologi.png" alt="Genteknologi">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -200,12 +182,6 @@
                     <iframe src="../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
