--- a/realfag/programfag/biologi/index.html
+++ b/realfag/programfag/biologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./biologi.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Biologi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Biologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -88,8 +88,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/biologi/biologi_blod.jpg" alt="blod">
-                    <img src="../../assets/imgs/biologi/mikroskop.jpg" alt="Mikroskop">
+                    <img src="../../../assets/imgs/biologi/biologi_blod.jpg" alt="blod">
+                    <img src="../../../assets/imgs/biologi/mikroskop.jpg" alt="Mikroskop">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -103,7 +103,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/memory_match_biologi/index.html" id="memory-match-spill"></iframe>
+                    <iframe src="../../../widgets/memory_match_biologi/index.html" id="memory-match-spill"></iframe>
                 </div>
             </div>
         </div>
@@ -165,8 +165,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/biologi/tur.jpg" alt="Folk på tur">
-                    <img src="../../assets/imgs/biologi/genteknologi.png" alt="Genteknologi">
+                    <img src="../../../assets/imgs/biologi/tur.jpg" alt="Folk på tur">
+                    <img src="../../../assets/imgs/biologi/genteknologi.png" alt="Genteknologi">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -179,15 +179,15 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
-    <script src="../../script/biologi.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
+    <script src="../../../script/biologi.js"></script>
 </body>
 </html>
