biologi-iframe testing om ting fungerer

--- a/realfag/programfag/biologi/index.html
+++ b/realfag/programfag/biologi/index.html
@@ -179,7 +179,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/biologi_quiz/index.html" width="510" height="570" style="border: none;" id="biologi-iframe"></iframe>
                 </div>
             </div>
         </div>
